@@ -1,3 +1,13 @@
+[B]1.2.5[/B]
+- Added Hebrew translation by Eng2Heb
+- Cosmetics
+
+[B]1.2.4[/B]
+- Cosmetics
+
+[B]1.2.3[/B]
+- Added Live stream
+
 [B]1.2.2[/B]
 - Cosmetics
 - Various tweaks in addon.xml
